[gd_scene load_steps=3 format=3 uid="uid://somftruflt2y"]

[ext_resource type="Script" path="res://Scripts/killzone.gd" id="1_a6b33"]
[ext_resource type="AudioStream" uid="uid://boe6bkyv1vsfy" path="res://Assets/sounds/hurt.wav" id="2_gxplq"]

[node name="killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_a6b33")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="death_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_gxplq")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
